# BASE360

./: .gitignore  pyproject.toml
src/: __init__.py  adm.py  api.py  app.py  auth.py  cliente.py  constants.py  forms.py  models.py  oportunidades.py  schemas.py  settings.toml  utils.py  views.py
src/migrations/versions/: 00cddc5b3863_.py  085f23e36fbd_.py  12fd856cd69c_.py  2a418fb35341_.py  2a70f5aecc5b_.py  2b27bcc59f1f_.py  2d6123c6d0cb_.py  31ecfb4e71cd_.py  37f22231f929_.py  454c4774712f_.py  70c23237c701_.py  80ee804f029f_.py  825582ccf8cf_.py  9023f9b0ff04_.py  91c80a0af526_.py  9c9c06c16240_.py  b4243bd16c08_.py  bced6aa49fca_.py  c53dccce2834_.py  d30fe9a80b71_.py
src/static/css/: etapas.css  sidebar.css
src/static/scripts/: login.py  propostas_js.py  vendas.py
src/templates/: _cliente_card.html  _header.html  acproposta.html  cadproposta.html  catalogo.html  cliente.html  clientes.html  criarusuario.html  erro404.html  etapas.html  index.html  input.html  login.html  pdf.html  sidebar.html
src/templates/cadastro/: datas.html  login.html  proponente.html  registrar.html  tabela.html
src/templates/htmx/: form_permissoes.html  link_form.html
src/tests/: conftest.py  helpers.py  test_cliente_view.py  test_flask.py
